--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
     "@rails/webpacker": "5.4.3",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "@fortawesome/fontawesome-free": "^5.14.0",
+    "bootstrap": "^4.5.2",
+    "jquery": "^3.5.1",
+    "jquery-ui": "^1.13.0",
+    "jquery-ui-dist": "^1.13.0",
+    "popper.js": "^1.16.1",
+    "lazysizes": "^5.3.2"
   },
   "version": "0.1.0",
   "devDependencies": {
